syntax = "proto3";
package Gable;


message Vector2 { 
    float x = 1;//  
    float y = 2;//  
}