syntax = "proto3";
package Gable;


message Vector4 { 
    float x = 1;//  
    float y = 2;//  
    float z = 3;//  
    float w = 4;//  
}